# identity-storage-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: api.md  architecture.md  development.md  usage.md
src/identity_storage/: __init__.py
src/identity_storage/adapters/: __init__.py
src/identity_storage/adapters/ingest/: __init__.py  base.py  claude_code.py  cli.py
src/identity_storage/adapters/mcp/: __init__.py  schemas.py  server.py  tools.py
src/identity_storage/db/: __init__.py  connection.py
src/identity_storage/model/: __init__.py  memory_model.py  raw_memory.py  store_request.py
src/identity_storage/repository/: __init__.py  helpers.py  memory_repository.py  raw_memory_repository.py
src/identity_storage/schemas/: schema.sql
src/identity_storage/service/: __init__.py  memory_service.py  validation.py
tests/unit/: test_consolidation.py  test_ingestor.py  test_repository.py  test_service.py
