[project]
name = "identity-storage"
version = "0.1.0"
description = "Portable long-term memory for AI agents — an auditable MCP memory server backed by SQLite."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "identity-storage contributors" }]
keywords = ["mcp", "ai", "memory", "agent", "sqlite", "long-term-memory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.7.0",
    "uuid-utils>=0.10.0",
]

[project.scripts]
identity-storage-mcp = "identity_storage.adapters.mcp.server:main"

[project.urls]
Homepage = "https://github.com/mikskrzyp/identity-storage"
Repository = "https://github.com/mikskrzyp/identity-storage"
Issues = "https://github.com/mikskrzyp/identity-storage/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "ARG", "PL"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
no_implicit_reexport = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"

[tool.hatch.build.targets.wheel]
packages = ["src/identity_storage"]
artifacts = ["src/identity_storage/schemas/*.sql"]

[tool.hatch.build.targets.wheel.force-include]
"src/identity_storage/schemas/schema.sql" = "identity_storage/schemas/schema.sql"